[package]
name = "jsnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.6"
indicatif = "0.17.3"
dirs = "4.0.0"
nix = "0.26.2"
byteordered = "0.6.0"
lazy_static = "1.4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
