[package]
name = "jsnap"
version = "0.1.0"
edition = "2021"

[dependencies]
# 参数解析
clap = "4.2.7"
# 进度条
indicatif = "0.17.3"
# SQLite数据库
rusqlite = { version = "0.29.0", features = ["bundled"], default-features = false }
#r2d2 = "0.8.10"
#r2d2_sqlite = "0.22.0"
# 退出状态码
exitcode = "1.1.2"
# 字节序
byteordered = "0.6.0"
# Getter函数生成
derive-getters = "0.2.1"