[package]
name = "jsnap"
version = "0.1.0"
edition = "2021"

[dependencies]
# 参数解析
clap = "4.2.7"
# 进度条
indicatif = "0.17.5"
# SQLite数据库
rusqlite = { version = "0.29.0", features = ["bundled"], default-features = false }
# 退出状态码
exitcode = "1.1.2"
# 字节序
byteordered = "0.6.0"
# Getter函数生成
derive-getters = "0.3.0"
# 命令行交互
rustyline = "12.0.0"

[features]
default = [
    "rustyline/derive",
    "rustyline/with-sqlite-history"
]